test_inputs/good/function_shadowing.lat
class A {
    int printInt(int a) {
        return 0;
    }
}

int main() {
    A a = new A;
    return a.printInt(13);
}
