test_inputs/bad/weird_class_hierarchy.lat
class A extends C {

}

class B extends C {

}

class C extends C {

}

int main() {
    return 0;
}